fix: missing lerna workspace configuration

--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,6 @@
   "packages": ["apps/*", "libraries/*", "services/*"],
   "version": "independent",
   "npmClient": "yarn",
-  "stream": true
+  "stream": true,
+  "useWorkspaces": true
 }
