--- a/services/delivery/package.json
+++ b/services/delivery/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
