--- a/services/delivery/package.json
+++ b/services/delivery/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
