--- a/apps/operator/Dockerfile
+++ b/apps/operator/Dockerfile
@@ -1,24 +1,8 @@
-FROM node:iron-alpine as base
-COPY . /app
+FROM node:iron-alpine
 WORKDIR /app
-RUN yarn && yarn build
-RUN rm -rf node_modules
+COPY . .
+RUN yarn install --pure-lockfile --non-interactive --cache-folder ./ycache; rm -rf ./ycache && yarn build
 
-FROM node:iron-alpine as production
-
-RUN addgroup -S nonroot \
-    && adduser -S nonroot -G nonroot
-USER nonroot
-
-WORKDIR /app
-# COPY --from=base /app/ .
-COPY --from=base /app/package*.json ./
-COPY --from=base /app/.next ./.next
-COPY --from=base /app/node_modules ./node_modules
-ENV NODE_ENV=production
-# RUN yarn install --production --pure-lockfile --non-interactive --cache-folder ./ycache; rm -rf ./ycache
-
-EXPOSE 3000
+EXPOSE 3030
 
 CMD ["yarn", "start"]
-
