--- a/apps/operator/package.json
+++ b/apps/operator/package.json
@@ -6,21 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "build:lerna": "npx lerna run build --scope=@jet/operator",
-    "start": "next start",
+    "start": "next start -p 4000",
     "lint": "next lint",
     "docker:build": "docker build . -t operator-ui"
   },
   "dependencies": {
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
