--- a/services/delivery/package.json
+++ b/services/delivery/package.json
@@ -8,8 +8,10 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
+    "socket.io": "^4.7.5",
     "zod": "^3.23.4"
   },
   "devDependencies": {
