--- a/services/delivery/package.json
+++ b/services/delivery/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
     "zod": "^3.23.4"
